<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/hello_world_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_activity" />

        <Button
            android:id="@+id/orientation_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orientation_activity_button" />

        <Button
            android:id="@+id/view_model_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_model_activity_button" />
        <Button
            android:id="@+id/live_data_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_data_activity_button" />
        <Button
            android:id="@+id/data_binding_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_binding_activity_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>